<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/appCompatBtnScroll"
        android:layout_width="match_parent"
        android:layout_height="185dp"
        android:layout_margin="25dp"
        android:background="@color/limegreen"
        android:text="@string/scroll_view"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLinear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/appCompatBtnScroll"
        android:layout_margin="25dp">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/appCompatButton5"
            android:layout_width="170dp"
            android:layout_height="200dp"
            android:background="@color/limegreen"
            android:text="@string/linear_layout"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="170dp"
            android:layout_height="200dp"
            android:layout_marginStart="30dp"
            android:background="@color/limegreen"
            android:text="@string/relative_layout"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/appCompatButton5"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="25dp"
        android:layout_marginTop="24dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/constraintLinear">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/appCompatButton6"
            android:layout_width="170dp"
            android:layout_height="200dp"
            android:background="@color/limegreen"
            android:text="@string/frame_layout"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="170dp"
            android:layout_height="200dp"
            android:layout_marginStart="24dp"
            android:background="@color/limegreen"
            android:text="@string/constraint_layout"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/appCompatButton6"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>